# VoiceChat

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  VoiceChatAPI.md  docker-compose.yml  mypy.ini  pyproject.toml  voice_chat_backend_change_requirements.md  voicechat_readme.md
.github/workflows/: docker-publish.yml
app/: __init__.py  asgi.py  factory.py  lifespan.py  main.py  routes.py  socket.py
app/core/: api_models.py  config.py  deps.py  error_handlers.py  logging.py  middleware.py  openapi.py  rate_limit.py  rate_limit_deps.py  responses.py  security.py
app/core/errors/: __init__.py  exceptions.py  handlers.py  openapi.py
app/core/http/: __init__.py  api_models.py  responses.py
app/core/pagination/: cursor.py
app/core/rate_limit/: __init__.py  dependencies.py  limiter.py
app/db/: indexes.py  mongo.py
app/health/: router.py  schemas.py  service.py
app/infra/email/: __init__.py  base.py  jobs.py  mock.py  service.py  smtp.py
app/infra/queue/: __init__.py  base.py  rabbitmq.py
app/infra/storage/: __init__.py  base.py  keys.py  local.py  s3.py
app/modules/auth/: methods.py  refresh_repository.py  repository.py  router.py  schemas.py  service.py  username.py
app/modules/calls/: __init__.py  repository.py  (+7 more)
app/scripts/: backfill_usernames.py  migrate_messages_media.py
app/tests/: conftest.py  test_messages_repo.py
app/workers/: email_worker.py
docs/: auth.md  calls.md  discovery.md  index.md  messages.md  passkeys.md  pings.md  realtime.md  stickers.md  users.md  webrtc.md
ws-test/: index.js  package-lock.json  package.json
(+89 files in other folders)
