[tool.poetry]
name = "voicechat"
version = "0.1.0"
description = ""
authors = ["Vachagan <vachagan.grigoryan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
motor = "^3.7.1"
pymongo = "^4.16.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.22"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
email-validator = "^2.3.0"
python-socketio = {extras = ["asgi"], version = "^5.16.1"}
structlog = "^25.5.0"
python-dotenv = "^1.2.2"
boto3 = "^1.42.60"
aiosmtplib = "^5.1.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
limits = "^5.8.0"
aio-pika = "^9.6.1"
redis = "^7.3.0"
webauthn = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
black = "^26.1.0"
ruff = "^0.15.4"
mypy = "^1.19.1"
python-socketio = {extras = ["client"], version = "^5.16.1"}
aiohttp = "^3.13.3"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
asyncio_mode = "strict"